--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
+    compile 'com.google.code.gson:gson:2.8.2'
     implementation 'junit:junit:4.12'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
